--- a/CadastroAluno.html
+++ b/CadastroAluno.html
@@ -1,2 +1,3 @@
 <RA do aluno> 3019114591 </RA do aluno>
 <Nome do aluno> Peterson de Jesus Komori </Nome do aluno>
+<Data de Nascimento do aluno> 08/02/2001 </Data de Nascimento do aluno>
