--- a/CadastroAluno.html
+++ b/CadastroAluno.html
@@ -1,3 +1,4 @@
 <RA do aluno> 3019114591 </RA do aluno>
 <Nome do aluno> Peterson de Jesus Komori </Nome do aluno>
+<email do aluno> peterson.komori@uni9.edu.br </email do aluno>
 <Data de Nascimento do aluno> 08/02/2001 </Data de Nascimento do aluno>
